[package]
name = "rust-wasm-demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"] # Don't forget this!

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.41"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.27"
js-sys = "0.3.55"
percy-dom = "0.6"

[dependencies.web-sys]
version = "0.3.55"
features = [
    "Document",
    "MouseEvent",
    "Window",
    "console"
]